--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,7 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flt_worker:
+  flt_worker_nullsafety:
     path: ../
 
 # For information on the generic Dart part of this file, see the
